--- a/CoolWeather/app/build.gradle
+++ b/CoolWeather/app/build.gradle
@@ -20,6 +20,10 @@ android {
 }
 
 dependencies {
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'org.litepal.android:core:1.3.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
